<resources>
    <string name="app_name">CogornoNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="comune_di_cogorno">Comune di Cogorno</string>
    <string name="stemma">stemma</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="piano_di_emergenza_comunale">Piano di Emergenza Comunale</string>
    <string name="dati_di_base_del_territorio">Dati di Base del Territorio</string>
    <string name="risorse_disponibili">Risorse Disponibili</string>
    <string name="gestione_segnaletica_e_aree_di_emergenza">Gestione Segnaletica e Aree di Emergenza</string>
    <string name="scenari_di_rischio_e_modelli_di_intervento">Scenari di rischio e modelli di intervento</string>
    <string name="schede_di_autoprotezione_per_la_popolazione">Schede di autoprotezione per la popolazione</string>
    <string name="comunicazioni">Comunicazioni</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <string name="accesso">Accesso</string>
    <string name="title_activity_registrati">RegistratiActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="Registrati">Registrati</string>
    <string name="Login">Login</string>
    <string name="Home">Home</string>
    <string name="nome">Nome</string>
    <string name="inserisci_il_tuo_nome">Inserisci il tuo nome</string>
    <string name="cognome">Cognome</string>
    <string name="inserisci_il_tuo_cognome">Inserisci il tuo cognome</string>
    <string name="ruolo">Ruolo</string>
    <string name="username">Username</string>
    <string name="inserisci_il_tuo_username">Inserisci il tuo username</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="inserisci_la_password_sole_lettere">Inserisci la password</string>
    <string name="invia">Invia</string>
    <string name="Inserisci_la_password">Inserisci la tua password</string>
    <string name="title_activity_dati_di_base">DatiDiBase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="clicca">clicca</string>
    <string name="dati_di_base_relativi_al_territorio_comunale">Dati di base relativi al territorio comunale</string>
    <string name="generalit">Generalità</string>
    <string name="cartografia_disponibile">Cartografia Disponibile</string>
    <string name="viabilit">Viabilità</string>
    <string name="accessi_alle_varie_zone_del_territorio">Accessi alle varie zone del territorio</string>
    <string name="strutture_scolastiche_e_civiche">Strutture scolastiche e civiche</string>
    <string name="centri_di_culto_e_di_aggregazione">Centri di culto e di aggregazione</string>
    <string name="localizzazione_disabili_e_persone_non_autosufficienti">Localizzazione disabili e persone non autosufficienti</string>
    <string name="dati_geografici">Dati Geografici</string>
    <string name="n_telefono">N° Telefono</string>
    <string name="vuoto">vuoto</string>
    <string name="tel">Tel</string>
    <string name="tel_fax">Tel/Fax</string>
    <string name="indirizzo_sito_internet">Indirizzo Sito Internet</string>
    <string name="indirizzo_sede_comunale">INDIRIZZO SEDE COMUNALE</string>
    <string name="polizia_municipale_c_o_sede_comunale">POLIZIA MUNICIPALE c/o sede comunale</string>
    <string name="indirizzo_uffici_comunali_distaccati">Indirizzo Uffici Comunali distaccati</string>
    <string name="ufficio_assistenti_sociali">Ufficio Assistenti Sociali</string>
    <string name="cell">Cell</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="popolazione">Popolazione</string>
    <string name="totale_residenti">Totale Residenti</string>
    <string name="coordinate_geografiche">coordinate_geografiche</string>
    <string name="altitudine">altitudine</string>
    <string name="sistema_decimale">Sistema Decimale</string>
    <string name="sistema_sessagesimale">Sistema Sessagesimale</string>
    <string name="latitudine_nord">Latitudine Nord</string>
    <string name="longitudine_est">Longitudine Est</string>
    <string name="latitudine">Latitudine</string>
    <string name="longitudine">Longitudine</string>
    <string name="descrizione_accessi">Il territorio del Comune di Cogorno è ubicato sul versante orografico sinistro del Fiume Entella e può essere distinto sostanzialmente nella piana alluvionale associata al fiume ed ai pendii che risalgono in direzione Est.
    Su fondovalle è presente un\'urbanizzazione discretamente compatta mentre in collina si riscontrano piccole frazioni e, soprattutto, insediamenti sparsi.
    Conseguentemente a tale condizione morfologica, l\'accessibilità alle varie frazioni per controlli, verifiche, interventi in emergenza, soccorsi, dovranno tenere in debito conto delle vie di penetrazione per giungere alle varie parti del territorio e alle varie frazioni nonchè alle alternative possibili.
    Le carte tematiche allegate al presente Piano indicano le principali viabilità entro il territorio comunale.</string>
    <string name="n_indicativo_alunni">N. Indicativo Alunni</string>
    <string name="n_indicativo_personale">N. Indicativo personale</string>
    <string name="contatti">Contatti</string>
    <string name="disabili">In situazioni di emergenza è importante avere un quadro informativo chiaro e dettagliato delle presenze vulnerabili e la loro localizzazione sul territorio, in modo da poter attuare un\'azione mirata di soccorso.
    In tale prospettiva è allegato al presente Piano un elenco esaustivo fornito dall\'Assistente Sociale del Comune, contenente i nominativi e i recapiti delle persone disabili e/o non autosufficienti.
    Tale documento deve essere consultabile dal centro operativo che gestisce l\'emergenza.</string>
    <string name="title_activity_schede">Schede</string>
    <string name="title_activity_risorse_disponibili">RisorseDisponibili</string>
    <string name="personale_apicale">Personale Apicale</string>
    <string name="mezzi_in_dotazione_al_comune">Mezzi in dotazione al comune</string>
    <string name="materiali_in_dotazione_al_comune">Materiali in dotazione al comune</string>
    <string name="protezione_civile_e_altri_gruppi_di_volontariato">Protezione Civile e altri gruppi di volontariato</string>
    <string name="professionisti_tecnici">Professionisti tecnici</string>
    <string name="sanit_assistenza_sociale_e_veterinaria">Sanità, Assistenza Sociale e Veterinaria</string>
    <string name="imprese_di_edilizia_e_fornitori">Imprese di edilizia e fornitori</string>
    <string name="attivit_produttive_per_l_approvigionamento_di_risorse">Attività produttive per l\'approvigionamento di risorse</string>
    <string name="nome_e_cognome">Cognome e Nome</string>
    <string name="funzione">Funzione</string>
    <string name="residenza">Residenza</string>
    <string name="n_telefonici">N° Telefonici</string>
    <string name="quantit">Quantità</string>
    <string name="tipologia">Tipologia</string>
    <string name="localizzazione">Localizzazione</string>
    <string name="disponibilit">Disponibilità</string>
    <string name="targa">Targa</string>
    <string name="genere">Genere</string>
    <string name="title_activity_segnaletica_earee_emergenza">SegnaleticaEAreeEmergenza</string>
    <string name="cartelli_luminosi">Cartelli Luminosi</string>
    <string name="aree_di_emergenza">Aree di Emergenza</string>
    <string name="aree_di_attesa">Aree di Attesa</string>
    <string name="aree_di_ricovero">Aree di ricovero</string>
    <string name="aree_di_ammassamento_soccorritori_e_risorse">Aree di ammassamento soccorritori e risorse</string>
    <string name="aree_per_atterraggio_elicotteri_di_soccorso">Aree per atterraggio elicotteri di soccorso</string>
    <string name="aree_per_scoccaggio_temporaneo_di_detriti_e_mezzi_di_zone_colpite_da_calamit">Aree per scoccaggio temporaneo di detriti e mezzi di zone colpite da calamità</string>
    <string name="siti_per_distributori_acqua_potabile_e_generi_di_prima_necessit">Siti per distributori acqua potabile e generi di prima necessità</string>
    <string name="gestione_segnaletica">Gestione Segnaletica</string>
    <string name="manutentore_hardware">Manutentore - Hardware</string>
    <string name="operatori_per_messaggi">Gestione messaggistica</string>
    <string name="title_activity_scenari_emodelli">ScenariEModelli</string>
    <string name="evento_alluvionale">Evento Alluvionale</string>
    <string name="evento_sismico">Evento sismico</string>
    <string name="evento_nivologico">Evento Nivologico</string>
    <string name="rischio_incendi">Rischio Incendi</string>
    <string name="rischi_vari">Rischi Vari</string>
    <string name="scenari_di_rischio">Scenari di Rischio</string>
    <string name="modelli_di_intervento">Modelli di Intervento</string>
    <string name="post_evento">Post Evento</string>
    <string name="title_activity_email">Email</string>
    <string name="a">A:</string>
    <string name="oggetto">Oggetto</string>
    <string name="messaggio">Messaggio</string>
    <string name="invia_email">Invia Email</string>
    <string name="inserisci_i_destinatari">Inserisci i destinatari</string>
    <string name="inserisci_l_oggetto">Inserisci l\'oggetto</string>
    <string name="digita_il_testo_dell_email">Digita il testo dell\'email</string>
    <string name="visualizza_tutte">Visualizza tutte</string>
    <string name="filtra_per_nome">Filtra per nome</string>
    <string name="inserisci_il_nome_della_struttura">Inserisci nome struttura</string>
    <string name="filtra_per_via">Filtra per via</string>
    <string name="inserisci_via">Inserisci via</string>
    <string name="bottonecerca">bottoneCerca</string>
    <string name="amministratore">Amministratore</string>
    <string name="title_activity_amministratore">Amministratore</string>
    <string name="login_amministratore">Login Amministratore</string>
    <string name="esci">Esci</string>
    <string name="aggiungi_utente_autorizzato">Aggiungi utente autorizzato</string>
    <string name="inserisci_il_nome">Inserisci il nome</string>
    <string name="inserisci_il_cognome">Inserisci il cognome</string>
    <string name="aggiungi">Aggiungi</string>
</resources>
