<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="50dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Email"
    tools:showIn="@layout/app_bar_email">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_text_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inserisci_i_destinatari"
        android:inputType="textEmailAddress"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oggetto"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inserisci_l_oggetto"
        android:inputType="textEmailSubject"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messaggio"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:hint="@string/digita_il_testo_dell_email"
        android:lines="10"
        android:textColorHint="?attr/actionModeSplitBackground" />

    <Button
        android:id="@+id/btn_inviaMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_content_main"
        android:text="@string/invia_email"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>